# fly-in

./: Makefile  README.md  pyproject.toml
src/: error.py  fly-in.py  fly_in.py
src/display/: __init__.py  app.py  display.py  helpers.py  view.py
src/logic/: __init__.py  drones.py  map.py  nodes.py
src/parsing/: __init__.py  parsing.py
